5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1636_2449.log
== SUBMITION (2019-04-15 13:44:03) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.191064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:44:06) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 12:26:24) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.225005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:26:25) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 12:26:29) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.162813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:26:29) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 12:26:29) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.085742
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 12:26:30) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.096204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:26:30) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 12:26:30) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	msg="Nao tem solucao "
	print(msg)
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
